--- a/www/index.html
+++ b/www/index.html
@@ -69,12 +69,26 @@
         }
 
         function deleteData() {
-            $("#display").html("delete does not work");
-        }
+            UTdata.fetch()
+                .then(function(results) {
+                    return results.delete();
+                })
+                .then(function(results) {
+                    $("#display").removeClass();
+                    $("#display").addClass("text-light");
+                    $("#display").addClass("bg-primary");
+                    $("#display").html(msg);
+                })
+                .catch(function(error) {
+                    $("#display").removeClass();
+                    $("#display").addClass("bg-warning");
+                    $("#display").html("delete fail:" + JSON.stringify(error));
+                    })
+                }
 
-        function updateData() {
-            $("#display").html("update does not work");
-        }
+            function updateData() {
+                $("#display").html("update does not work");
+            }
     </script>
 </head>
 
