--- a/www/index.html
+++ b/www/index.html
@@ -65,7 +65,17 @@
         }
 
         function countData() {
-            $("#display").html("count does not work");
+            UTdata.order(key, true).fetchAll()
+                .then(function(results) {
+                    let msg = "";
+                    for (let i = 0; i < results.length; i++) {
+                        msg += results[i].get(key) + "<br>";
+                    }
+                    $("#display").removeClass();
+                    $("#display").addClass("text-light");
+                    $("#display").addClass("bg-primary");
+                    $("#display").html(msg);
+                })
         }
 
         function deleteData() {
@@ -87,7 +97,23 @@
                 }
 
             function updateData() {
-                $("#display").html("update does not work");
+                UTdata.fetch()
+                .then(function(results) {
+                    let value = parseInt($("#update").val());
+                    results.set(key, value);
+                    return results.update();
+                })
+                .then(function(results) {
+                    $("#display").removeClass();
+                    $("#display").addClass("text-light");
+                    $("#display").addClass("bg-primary");
+                    $("#display").html(msg);
+                })
+                .catch(function(error) {
+                    $("#display").removeClass();
+                    $("#display").addClass("bg-warning");
+                    $("#display").html("delete fail:" + JSON.stringify(error));
+                    })
             }
     </script>
 </head>
