--- a/www/index.html
+++ b/www/index.html
@@ -65,14 +65,13 @@
         }
 
         function countData() {
-            UTdata.order(key, true).fetchAll()
+            UTdata.count().fetchAll()
                 .then(function(results) {
-                    let msg = "";
-                    for (let i = 0; i < results.length; i++) {
-                        msg += results[i].get(key) + "<br>";
-                    }
                     $("#display").removeClass();
-                    $("#display").addClass("text-light");
+                    $("#display").addClass("bg-success");
+                    $("#display").html(results.count);
+                })
+                .catch(function(error){
                     $("#display").addClass("bg-primary");
                     $("#display").html(msg);
                 })
